--- a/Results.tex
+++ b/Results.tex
@@ -93,16 +93,16 @@ As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figur
 \end{figure*}
 
 %% Effect of ciprofloxacin exposure on the different mutants
-To better understand the factors that contribute to the dissociation of RecB from DNA, we imaged two different mutants (\dreca\ and \teneighty), in the presence and absence of 30 ng/ml ciprofloxacin. Figure \ref{Fig:mutants} shows brightfield images of cells that were not exposed to ciprofloxacin, and cells that were exposed to 30 ng/ml ciprofloxacin for 60 min. Supp. Figure \ref{SIFig:mutants_cell_lengths} shows the average cell length values across conditions and for the different ciprofloxacin exposure durations. As previously observed, wild-type cells show a clear response to exposure to 30 ng/ml ciprofloxacin, where the cell length increases significantly due to induction of the SOS response. In contrast to this, since the \dreca\ mutant is unable to form a RecA filament, it is also unable to induce the SOS response. Cell length therefore remains unchanged, even upon prolonged exposure to 30 ng/ml ciprofloxacin. The \teneighty\ mutant cells were slightly more elongated than wild-type cells in the absence of ciprofloxacin. This matches well with previous indications that this mutant has a higher baseline of SOS induction than wild-type cells in the absence of exogenous DNA damage.\cite{Lepore2023} Upon exposure to ciprofloxacin, the cell length of the \teneighty\ mutant increased, albeit slightly less on average than the wild-type's (Supp. Figure \ref{SIFig:mutants_cell_lengths}). This might be a reflection of \teneighty's inability to load RecA on the DNA, and the use of the alternative RecOR pathway leading to a weaker or delayed SOS response.
+Imaging RecB binding to DSBs in the presence of different concentrations of ciprofloxacin allowed us to determine that the amount of DNA damage experienced by the cells did not influence the time spent by RecB on DNA. Next, we wanted to test whether RecB dissociation from DNA was influenced by RecA loading. Therefore, we imaged the \dreca\ and \teneighty mutants in the presence and absence of 30 ng/ml ciprofloxacin. Figure \ref{Fig:mutants} shows brightfield images of cells that were not exposed to ciprofloxacin, and cells that were exposed to 30 ng/ml ciprofloxacin for 60 min. Supp. Figure \ref{SIFig:mutants_cell_lengths} shows the average cell lengths in the different conditions and ciprofloxacin exposure durations. As previously observed, wild-type cells show a clear response to exposure to 30 ng/ml ciprofloxacin, where the cell length increases significantly due to induction of the SOS response. In contrast to this, since the \dreca\ mutant is unable to form a RecA filament, it is also unable to induce the SOS response. Cell length therefore remains unchanged, even upon prolonged exposure to 30 ng/ml ciprofloxacin. In the absence of ciprofloxacin, the \teneighty\ mutant cells were slightly more elongated than wild-type cells. This matches previous indications that this mutant has a higher baseline of SOS induction than wild-type cells in the absence of exogenous DNA damage.\cite{Lepore2023} Upon exposure to ciprofloxacin, the cell length of the \teneighty\ mutant increased, albeit slightly less on average than the wild-type's (Supp. Figure \ref{SIFig:mutants_cell_lengths}). This might be a reflection of \teneighty's inability to load RecA on the DNA, and the use of the alternative RecOR pathway leading to a weaker or delayed SOS response.\cite{Ivancic-Bace_2003,Lepore2023}
 
 %% DNA binding lifetimes
-As for the wild-type (WT) strain, we computed histograms of RecB spot lifetimes, and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the slower rate, corresponding to the dissociation of DNA-bound RecB molecules. The corresponding lifetimes for DNA-bound RecB are shown on Figure \ref{Fig:mutants}B. In the \dreca\ mutant, the DNA-binding lifetime of RecB was similar to the wild-type ($\sim$10 sec). This suggests that RecA loading by RecBCD does not play a role in triggering the dissociation of RecBCD from DNA. Both in the presence and absence of ciprofloxacin, \teneighty\ stayed bound to DNA for longer than wild-type RecB ($\sim$20 sec). This could be due to the inability of \teneighty\ to digest the DNA it unwinds, making dissociation more challenging due to the DNA strands threading through the RecBCD complex.
+As for the wild-type strain, we computed histograms of RecB spot lifetimes, and fitted them with a bi-exponential decay model (Supp. Figure \ref{SIFig:mutants_biexp_fits}), from which we extracted the binding times of RecB on DNA (Figure \ref{Fig:mutants}B). In the \dreca\ mutant, the DNA-binding lifetime of RecB was similar to the wild-type ($\sim$10 sec). This suggests that RecA loading by RecBCD does not play a role in triggering the dissociation of RecBCD from DNA. Both in the presence and absence of ciprofloxacin, \teneighty\ stayed bound to DNA for longer than wild-type RecB ($\sim$20 sec). This could be due to the inability of \teneighty\ to digest the DNA it unwinds, making dissociation more challenging due to the DNA strands threading through the RecBCD complex.
 
 %% RecB recruitment rate
 Estimating the recruitment rate of RecB to the DNA provided additional insight into the dynamics of DSB processing in the \dreca\ and \teneighty\ mutants (Figure \ref{Fig:mutants}C). In the \dreca\ mutant, the rate of recruitment of RecB was increased compared to wild-type cells, both in the presence and absence of ciprofloxacin. As in both cases the rate of DSB formation is expected to be the same between the wild-type and the \dreca\ mutant, we can hypothesise that this higher rate of RecB recruitment to DNA is due to multiple recruitment events on the same original DSB. In the mutant cells, RecBCD processes the DNA, but the generated ssDNA cannot be coated with the RecA protein, and is therefore likely to be degraded by cellular endo- and exonucleases such as SbcCD. Degradation of the ssDNA would lead to a blunting of the DNA end, hence creating a new substrate for RecBCD binding. This deleterious cycle was previously reported to occur in cells lacking the RecA protein, eventually leading to full chromosome degradation\cite{Capaldo1975,Skarstad1993}. In our experiment, it results in multiple recruitments of RecB to DNA for each DSB.
 
 %%% Intermediate recruitment in 1080 compared to WT and ΔrecA, probably resulting from a competition between ssDNA degradation + RecB reloading, and RecA loading + repair
-In the \teneighty\ mutant, RecB recruitment is higher than in WT cells, but equivalent (in the absence of ciprofloxacin) or lower (in the presence of 30 ng/ml ciprofloxacin) to the level of RecB recruitment in the \dreca\ mutant (Figure \ref{Fig:mutants}C). Upon DSB recognition, \teneighty\ unwinds DNA without digesting it, and dissociates $\sim$2 times slower than wild-type RecB (Figure \ref{Fig:mutants}B). After RecBCD dissociation, we expect two competing pathways to take place. Either (i) the unwound ssDNA is digested by cellular endo- and exonucleases, creating a new RecBCD substrate; or (ii) RecOR displaces the SSB (Single-Strand DNA-Binding) protein and promotes RecA loading, allowing DNA repair by homologous recombination to proceed. As a result, RecB can be recruited on DNA several times for each DSB (similarly to the \dreca\ mutant), but the cycle of re-recruitment can be broken by the action of RecOR.
+In the \teneighty\ mutant, RecB recruitment is higher than in WT cells, but equivalent (in the absence of ciprofloxacin) or lower (in the presence of 30 ng/ml ciprofloxacin) to the level of RecB recruitment in the \dreca\ mutant (Figure \ref{Fig:mutants}C). Upon DSB recognition, \teneighty\ unwinds DNA without digesting it, and dissociates $\sim$2 times slower than wild-type RecB (Figure \ref{Fig:mutants}B). After RecBCD dissociation, we expect two competing pathways to take place. Either (i) the unwound ssDNA is digested by cellular endo- and exonucleases, creating a new RecBCD substrate; or (ii) RecOR displaces the SSB (Single-Strand DNA-Binding) protein and promotes RecA loading, allowing DNA repair by homologous recombination to proceed.\cite{Ivancic-Bace_2003} As a result, RecB can be recruited on DNA several times for each DSB (similarly to the \dreca\ mutant), but the cycle of re-recruitment can be broken by the action of RecOR.
 
 %% Compaction of the nucleoid
 The differences in induction of the SOS response between the wild-type cells and the mutants resulted in different states of compaction for the bacterial nucleoid (Figure \ref{Fig:mutants}D, Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). Whereas in the wild-type, exposure to ciprofloxacin triggered compaction and centring of the nucleoid, the inability of the \dreca\ mutant to induce the SOS response resulted in two separate nucleoid regions at the cell poles. Furthermore, several cells appeared to have lower DNA content, consistent with RecBCD degrading large portions of the chromosome. Accordingly, the nucleoid occupied a smaller fraction of the cell in the \dreca\ mutant after exposure to ciprofloxacin (Supp. Figure \ref{SIFig:mutants_nucleoid_compaction}). In the RecB1080 mutant, the nucleoid appeared more disorganised than in wild-type cells, but still underwent compaction at the centre of the cell upon exposure to ciprofloxacin. Notably, the level of compaction of the nucleoid was slightly less important than in wild-type cells (38\% $\pm$ 9 of the cell occupied by the nucleoid after 75 min of exposure to ciprofloxacin, against 32\% $\pm$ 11 in the wild-type). This might again be a reflection of the less efficient RecA loading in this mutant, leading to delayed or weaker SOS response.
